feat(*): giscus cate id

--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -18,7 +18,7 @@ const repo = import.meta.env.PUBLIC_GISCUS_REPO;
         data-repo={repo}
         data-repo-id={repoId}
         data-category='Announcements'
-        data-category-id='DIC_kwDOMOzD3M4Cgh6T'
+        data-category-id='DIC_kwDOMTxQHM4CgqI0'
         data-mapping='pathname'
         data-strict='0'
         data-reactions-enabled='1'
