--- a/src/pages/sponsor.astro
+++ b/src/pages/sponsor.astro
@@ -8,7 +8,7 @@ import ScreenLayout from '@layouts/ScreenLayout.astro';
     <div class='flex-none justify-center h-full flex flex-col'>
       <h1 class='text-4xl leading-normal text-white'>
         DevNow Blog System <br />
-        是一个开源的技术博客项目
+        一个开源的博客项目
       </h1>
       <hr class='border-dashed my-8 border-white' />
 
