--- a/src/layouts/ScreenLayout.astro
+++ b/src/layouts/ScreenLayout.astro
@@ -46,7 +46,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
     <link rel='sitemap' href='/sitemap-index.xml' />
     <link rel='alternate' type='application/rss+xml' title='DevNow' href={'/rss.xml'} />
     <!-- faster docsearch https://docsearch.algolia.com/docs/DocSearch-v3#preconnect  -->
-    <link rel='preconnect' href='https://YOUR_APP_ID-dsn.algolia.net' crossorigin />
+    <link rel='preconnect' href='https://2FV8ZNQ69Q-dsn.algolia.net' crossorigin />
     <meta name='generator' content={Astro.generator} />
     <SEO
       title={makeTitle}
