--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,7 @@ import ThemeSwitch from '@components/ThemeSwitch.astro';
 import config from '@config/index';
 import { checkImageUrl } from '@utils/all';
 import { SEO } from 'astro-seo';
+import '@fontsource/lxgw-wenkai';
 const PUBLIC_GOOGLE_ANALYTICS_ID = import.meta.env.PUBLIC_GOOGLE_ANALYTICS_ID;
 interface Props {
   title?: string;
@@ -84,6 +85,9 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
       /* https://css-tricks.com/almanac/properties/c/content-visibility/ */
       img {
         content-visibility: auto;
+      }
+      h1 {
+        font-family: 'LXGW WenKai';
       }
     </style>
     <!-- Google tag (gtag.js) -->
