feat(*): upd font-family

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import ThemeSwitch from '@components/ThemeSwitch.astro';
 import config from '@config/index';
 import { checkImageUrl } from '@utils/all';
 import { SEO } from 'astro-seo';
-import '@fontsource/lxgw-wenkai';
+import '@fontsource/lxgw-wenkai-tc';
 const PUBLIC_GOOGLE_ANALYTICS_ID = import.meta.env.PUBLIC_GOOGLE_ANALYTICS_ID;
 interface Props {
   title?: string;
