--- a/src/common/globals.css
+++ b/src/common/globals.css
@@ -95,7 +95,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    font-family: LXGW WenKai;
+    font-family: LXGW WenKai Tc;
   }
 
   html .shiki {
