feat(*): new doc

--- a/src/layouts/ScreenLayout.astro
+++ b/src/layouts/ScreenLayout.astro
@@ -6,6 +6,8 @@ import Header from '@components/Header.astro';
 import ThemeSwitch from '@components/ThemeSwitch.astro';
 import { checkImageUrl } from '@utils/all';
 import { SEO } from 'astro-seo';
+import '@fontsource/lxgw-wenkai-tc';
+
 const PUBLIC_GOOGLE_ANALYTICS_ID = import.meta.env.PUBLIC_GOOGLE_ANALYTICS_ID;
 interface Props {
   title?: string;
