feat(*): add img preview

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,7 +50,10 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
 <html lang='en'>
   <head>
     <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width' />
+    <meta
+      name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no'
+    />
     <link rel='icon' type='image/svg+xml' href={ico} />
     <link rel='sitemap' href='/sitemap-index.xml' />
     <link rel='alternate' type='application/rss+xml' title={makeTitle} href={'/rss.xml'} />
