--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -84,7 +84,7 @@ const hasHeadering = headings && !!headings.length;
   .modal-content {
     margin: auto;
     display: block;
-    width: 80%;
+    max-width: 80%;
   }
 
   .close {
