--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,6 +6,10 @@ import ToggleTheme from './ToggleTheme.astro';
 import Search from './Search.tsx';
 import { LEFT_MENU, MOBILE_MENU, RIGHT_MENU } from '@data/nav';
 import MenuItem from './MenuItem.astro';
+interface Props {
+  showTheme?: boolean;
+}
+const { showTheme = true } = Astro.props;
 ---
 
 <div class={'px-8 py-5 lg:py-8 w-full xl:px-5 sticky top-[0] z-10 backdrop-blur-md shadow-sm'}>
@@ -54,7 +58,7 @@ import MenuItem from './MenuItem.astro';
       </div>
       <div class='absolute md:flex md:right-8 right-1/2 hidden'>
         <Search client:only='react' />
-        <ToggleTheme />
+        {!!showTheme && <ToggleTheme />}
       </div>
     </div>
     <div class='navmenu-toggle hidden'>
